[wip] クエリパラメータを取り出す処理と、JSON形式での返却

--- a/firebase/functions/cmd/get_activities_from_slack_uid/Makefile
+++ b/firebase/functions/cmd/get_activities_from_slack_uid/Makefile
@@ -1,13 +1,13 @@
-function_name = FetchActivitiesFromSlackBatch
-trigger_topic_name = fetch-activities-from-slack-batch-executer
-cmd_directory_name = fetch_activities_from_slack
+function_name = GetActivitiesFromSlackUidFunction
+cmd_directory_name = get_activities_from_slack_uid
 runtime_go_version = go116
+slack_uid = U01DG785DT4
 
 export_dotenv:
 	source ../../src/.env
 run_local:
 	cd ../../src && \
- 	go run ./app/$(cmd_directory_name)/main.go && \
+ 	go run ./app/$(cmd_directory_name)/main.go $(slack_uid) && \
  	cd ../cmd/$(cmd_directory_name)
 # CloudFunction をデプロイする場合、go.mod が存在するディレクトリに移動する必要がある
 create_function:
@@ -16,7 +16,8 @@ create_function:
 	gcloud functions deploy $(function_name) \
 		--region asia-northeast1 \
 		--runtime $(runtime_go_version) \
-		--trigger-topic $(trigger_topic_name) \
+		--trigger-http \
+		--allow-unauthenticated \
 		--set-env-vars GCP_PROJECT_ID=$(GCP_PROJECT_ID) \
 		--set-env-vars SLACK_BOT_OAUTH_TOKEN=$(SLACK_BOT_OAUTH_TOKEN) \
 		--set-env-vars SLACK_ASAKATSU_CHANNEL_ID=$(SLACK_ASAKATSU_CHANNEL_ID) && \
@@ -30,8 +31,9 @@ deploy:
 	cd ../../src && \
 	gcloud functions deploy $(function_name) \
 		--region asia-northeast1 \
-		--trigger-topic $(trigger_topic_name) \
-		--runtime $(runtime_go_version) && \
+		--runtime $(runtime_go_version) \
+		--trigger-http \
+        --allow-unauthenticated && \
 	cd ../cmd/$(cmd_directory_name)
 delete_deploy:
 	make delete_function;
